# otus-cpp-basics

./: CMakeLists.txt  MyForwardList.h  MyList.h  MyVector.h  README.md  check_value.cpp  check_value.h  high_scores.cpp  high_scores.h  main.cpp  random_value.cpp  random_value.h  statistics.cpp  statistics.h
include/: MyForwardList.h  MyList.h  MyVector.h  astnode.hpp  lexer.hpp
src/: astnode.cpp  lexer.cpp  main.cpp  parser.cpp
test/: CMakeLists.txt  list_test.cpp  test.cpp  vector_test.cpp
